# M3-Mix

./: .env.example  .gitignore  README.md
.github/workflows/: docs.yml
backend/: Dockerfile  main.py  pyproject.toml  railway.toml
backend/models/: schemas.py
backend/routers/: analyze.py  chat.py  optimize.py
backend/services/: ai.py  mmm.py  optimizer.py  supabase_client.py
backend/tests/: conftest.py  test_api.py  test_mmm.py  test_optimizer.py  test_schemas.py
data/: demo_data.csv
docs-site/: architecture.md  deploy.md  index.md  overview.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: custom.css
docs-site/backend/: api.md  mmm-model.md
docs-site/en/: architecture.md  deploy.md  index.md  overview.md
docs-site/en/backend/: api.md  mmm-model.md
docs-site/en/frontend/: overview.md
docs-site/frontend/: overview.md
docs/superpowers/plans/: 2026-04-01-m3mix-backend.md  2026-04-01-m3mix-frontend.md
docs/superpowers/specs/: 2026-04-01-mmm-tool-design.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ai/: ChatPanel.tsx  FloatingChat.tsx  NarrativePanel.tsx
frontend/components/dashboard/: ChannelTable.tsx  DecompositionChart.tsx  SaturationCurves.tsx  StatusPoller.tsx  SummaryCards.tsx
frontend/components/optimize/: AllocationComparison.tsx  BudgetSlider.tsx
frontend/components/upload/: CsvPreview.tsx  UploadZone.tsx
frontend/lib/: api.ts  types.ts
frontend/public/: exemplo-mmm.xlsx
scripts/: prepare_demo_data.py
(+7 files in other folders)
